--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,17 @@
 {
   "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "license": "MIT",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "nodemon src/server.js", 
-    "start": "node src/server.js"
+    "start": "node ./bin/www", 
+    "dev": "nodemon bin/www"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1",
+    "prettier": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
