--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,8 +1,8 @@
-service: 
+services: 
   db: 
     image: mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: root
     ports: 
     - 27017:27017
