--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,12 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "prettier": "^2.4.1"
   },
   "devDependencies": {
