--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "prettier": "^2.4.1"
